--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@rainbow-me/rainbowkit": "^2.1.2",
     "@tanstack/react-query": "^5.45.0",
     "@v9v/ts-react-telegram-login": "^1.1.1",
@@ -19,6 +20,7 @@
     "clsx": "^2.1.1",
     "ethers": "^6.13.0",
     "firebase": "^10.12.1",
+    "lucide-react": "^0.396.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
